tests/neg/preview-non-viral/defs_1.scala
//> using options -preview
import scala.annotation.preview

@preview def previewFeature = 42

def usePreviewFeature = previewFeature
